--- a/src/MemStat.Net/MemStat.Net.csproj
+++ b/src/MemStat.Net/MemStat.Net.csproj
@@ -7,7 +7,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="ResultBoxes" Version="0.3.26"/>
+        <PackageReference Include="ComputerInfo" Version="0.2.0" />
+        <PackageReference Include="Microsoft.VisualBasic" Version="10.3.0" />
+        <PackageReference Include="ResultBoxes" Version="0.3.26" />
     </ItemGroup>
 
 </Project>
