--- a/src/Sekiban.Aspire.Infrastructure.Cosmos/Sekiban.Aspire.Infrastructure.Cosmos.csproj
+++ b/src/Sekiban.Aspire.Infrastructure.Cosmos/Sekiban.Aspire.Infrastructure.Cosmos.csproj
@@ -5,11 +5,11 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <PackageId>Sekiban.Aspire.Infrastructure.Cosmos</PackageId>
-        <Version>0.22.0-preview9</Version>
+        <Version>0.22.0-preview10</Version>
         <Authors>J-Tech Group</Authors>
         <Company>J-Tech-Japan</Company>
         <PackageDescription>Sekiban - Event Sourcing Framework Cosmos Aspire Connector</PackageDescription>
-        <PackageVersion>0.22.0-preview9</PackageVersion>
+        <PackageVersion>0.22.0-preview10</PackageVersion>
         <Description>Beta Support for F#</Description>
         <RepositoryUrl>https://github.com/J-Tech-Japan/Sekiban</RepositoryUrl>
         <RootNamespace>Sekiban.Aspire.Infrastructure.Cosmos</RootNamespace>
@@ -19,12 +19,17 @@
         <SymbolPackageFormat>snupkg</SymbolPackageFormat>
         <UserSecretsId>dd033285-cc41-4f0b-a790-5dc058fda775</UserSecretsId>
         <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
+        <GenerateSBOM>true</GenerateSBOM>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Aspire.Azure.Storage.Blobs" Version="9.0.0" />
-        <PackageReference Include="Sekiban.Infrastructure.Cosmos" Version="0.22.0-preview9"/>
-        <PackageReference Include="Sekiban.Web" Version="0.22.0-preview9"/>
+        <PackageReference Include="Microsoft.Sbom.Targets" Version="3.0.0">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Sekiban.Infrastructure.Cosmos" Version="0.22.0-preview10"/>
+        <PackageReference Include="Sekiban.Web" Version="0.22.0-preview10"/>
         <ProjectReference Include="..\Sekiban.Infrastructure.Cosmos\Sekiban.Infrastructure.Cosmos.csproj"/>
         <ProjectReference Include="..\Sekiban.Web\Sekiban.Web.csproj"/>
         <None Include="..\README.md" Pack="true" PackagePath="\"/>
