--- a/src/Sekiban.Pure.SourceGenerator/Sekiban.Pure.SourceGenerator.csproj
+++ b/src/Sekiban.Pure.SourceGenerator/Sekiban.Pure.SourceGenerator.csproj
@@ -13,9 +13,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.12.0" />
+        <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.12.0"/>
     </ItemGroup>
-    <ItemGroup>
-        <Analyzer Include="$(TargetPath)" />
-    </ItemGroup>
+    <!--    <ItemGroup>-->
+    <!--        <Analyzer Include="$(TargetPath)" />-->
+    <!--    </ItemGroup>-->
 </Project>
