--- a/tests/Pure.Domain.Benchmark.Test/Pure.Domain.Benchmark.Test.csproj
+++ b/tests/Pure.Domain.Benchmark.Test/Pure.Domain.Benchmark.Test.csproj
@@ -20,6 +20,11 @@
 
     <ItemGroup>
         <ProjectReference Include="..\..\internalUsages\Pure.Domain\Pure.Domain.csproj"/>
+        <!--        <ProjectReference Include="..\..\src\Sekiban.Pure.SourceGenerator\Sekiban.Pure.SourceGenerator.csproj">-->
+        <!--            <OutputItemType>Analyzer</OutputItemType>-->
+        <!--            <ReferenceOutputAssembly>false</ReferenceOutputAssembly>-->
+        <!--            <PrivateAssets>all</PrivateAssets>-->
+        <!--        </ProjectReference>-->
         <!--        <ProjectReference Include="..\..\src\Sekiban.Pure.SourceGenerator\Sekiban.Pure.SourceGenerator.csproj" Publish="false"/>-->
     </ItemGroup>
 
