--- a/internalUsages/Pure.Domain/Pure.Domain.csproj
+++ b/internalUsages/Pure.Domain/Pure.Domain.csproj
@@ -10,11 +10,11 @@
 
     <ItemGroup>
         <ProjectReference Include="..\..\src\Sekiban.Pure\Sekiban.Pure.csproj"/>
-        <!--        <ProjectReference Include="..\..\src\Sekiban.Pure.SourceGenerator\Sekiban.Pure.SourceGenerator.csproj">-->
-        <!--            <OutputItemType>Analyzer</OutputItemType>-->
-        <!--            <ReferenceOutputAssembly>false</ReferenceOutputAssembly>-->
-        <!--            <PrivateAssets>all</PrivateAssets>-->
-        <!--        </ProjectReference>-->
+        <ProjectReference Include="..\..\src\Sekiban.Pure.SourceGenerator\Sekiban.Pure.SourceGenerator.csproj">
+            <OutputItemType>Analyzer</OutputItemType>
+            <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
+            <PrivateAssets>all</PrivateAssets>
+        </ProjectReference>
     </ItemGroup>
 
 </Project>
